feat: inativar admin