@@ -1,41 +1,54 @@
 package br.com.postech.techchallange.adapter.out.persistence.adapter;
 
-import br.com.postech.techchallange.domain.model.AdminUser;
-import br.com.postech.techchallange.domain.port.out.AdminUserRepositoryPort;
-import br.com.postech.techchallange.adapter.out.persistence.mapper.AdminUserMapper;
-import br.com.postech.techchallange.adapter.out.persistence.repository.AdminUserJpaRepository;
-import org.springframework.stereotype.Component;
-
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Component;
+
+import br.com.postech.techchallange.adapter.out.persistence.entity.admin.AdminUserEntity;
+import br.com.postech.techchallange.adapter.out.persistence.mapper.AdminUserMapper;
+import br.com.postech.techchallange.adapter.out.persistence.repository.AdminUserJpaRepository;
+import br.com.postech.techchallange.domain.model.AdminUser;
+import br.com.postech.techchallange.domain.port.out.AdminUserRepositoryPort;
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 
 @Component
+@RequiredArgsConstructor
 public class AdminUserRepositoryAdapter implements AdminUserRepositoryPort {
 
-	private final AdminUserJpaRepository repository;
-
-	public AdminUserRepositoryAdapter(AdminUserJpaRepository repository) {
-		this.repository = repository;
-	}
-
-	@Override
-	public AdminUser salvar(AdminUser admin) {
-		return AdminUserMapper.toDomain(repository.save(AdminUserMapper.toEntity(admin)));
-	}
+	private final AdminUserJpaRepository jpaRepository;
 
 	@Override
 	public Optional<AdminUser> buscarPorId(Long id) {
-		return repository.findById(id).map(AdminUserMapper::toDomain);
+		return jpaRepository.findById(id).map(AdminUserMapper::toDomain).map(this::removeSenhaHash);
 	}
 
 	@Override
 	public Optional<AdminUser> buscarPorEmail(String email) {
-		return repository.findByEmail(email).map(AdminUserMapper::toDomain);
+		return jpaRepository.findByEmail(email)
+				.map(AdminUserMapper::toDomain);
+	}
+
+	@Override
+	@Transactional
+	public AdminUser salvar(AdminUser admin) {
+		AdminUserEntity entity = AdminUserMapper.toEntity(admin);
+		AdminUserEntity entitySalvo = jpaRepository.save(entity);
+		return AdminUserMapper.toDomain(entitySalvo);
 	}
 
 	@Override
 	public List<AdminUser> listar() {
-		return repository.findAll().stream().map(AdminUserMapper::toDomain).collect(Collectors.toList());
+		return jpaRepository.findAll()
+				.stream()
+				.map(AdminUserMapper::toDomain)
+				.map(this::removeSenhaHash)
+				.toList();
+	}
+
+	private AdminUser removeSenhaHash(AdminUser admin) {
+		admin.setSenhaHash(null);
+		return admin;
 	}
 }
